Fix: Add missing seasonal page and fix logo display
- Create pages/seasonal.html (was missing from Phase 2 refactoring)
- Fix logo path in navigation.html (use assets/images/ instead of ../assets/images/)
- Increase logo size from h-12 to h-16
- Add bg-gray-50 pb-16 to view-seasonal in index.html
- Add logo images to assets/images/ directory

--- a/mockup/dev/index.html
+++ b/mockup/dev/index.html
@@ -63,7 +63,7 @@
         <div id="view-contact" class="page-view"></div>
         <div id="view-news-archive" class="page-view"></div>
         <div id="view-login" class="page-view"></div>
-        <div id="view-seasonal" class="page-view"></div>
+        <div id="view-seasonal" class="page-view bg-gray-50 pb-16"></div>
         <div id="view-404" class="page-view"></div>
         <div id="view-500" class="page-view"></div>
     </main>
