Fix: Add missing promotion page and improve UX
- Create pages/promotion.html (was missing from Phase 2 refactoring)
- Update breadcrumb config: show only on content pages (single, news)
- Fix logo link: change from # to index.html
- Increase logo size from h-12 to h-16
- Reorder home page sections: move AI recommendations after hero slider
- Update seasonal page hero to match other pages (bg-dark with image)
- Update promotion page hero to match other pages (bg-dark with image)
- Add bg-gray-50 pb-12 to view-promotion and view-seasonal in index.html

--- a/mockup/dev/index.html
+++ b/mockup/dev/index.html
@@ -57,7 +57,7 @@
         <div id="view-flights" class="page-view"></div>
         <div id="view-guide" class="page-view"></div>
         <div id="view-news" class="page-view"></div>
-        <div id="view-promotion" class="page-view"></div>
+        <div id="view-promotion" class="page-view bg-gray-50 pb-12"></div>
         <div id="view-search" class="page-view"></div>
         <div id="view-about" class="page-view"></div>
         <div id="view-contact" class="page-view"></div>
