--- a/mockup/dev/pages/seasonal.html
+++ b/mockup/dev/pages/seasonal.html
@@ -1,10 +1,11 @@
-<!-- Hero Section -->
-<div class="relative bg-gradient-to-r from-blue-600 via-green-500 to-orange-500 text-white py-20 mb-12 overflow-hidden">
-    <div class="absolute inset-0 bg-black/20"></div>
+<!-- Category Header -->
+<div class="relative bg-dark text-white py-16 mb-8 overflow-hidden">
+    <!-- Background Image -->
+    <img src="https://images.unsplash.com/photo-1506665531195-3566af2b4dfa?auto=format&fit=crop&w=1600&q=80" alt="เที่ยวตามฤดูกาล" class="absolute inset-0 w-full h-full object-cover opacity-30">
     <div class="container mx-auto px-4 text-center relative z-10">
-        <span class="text-white/90 font-bold tracking-wider uppercase text-sm mb-2 block">เที่ยวตามฤดูกาล</span>
-        <h1 class="text-4xl md:text-5xl font-heading font-bold mt-2 mb-4">ค้นหาจุดหมายที่เหมาะกับฤดูกาล</h1>
-        <p class="text-lg text-white/90 max-w-2xl mx-auto">เลือกเที่ยวตามฤดูกาลที่คุณชอบ พร้อมข้อมูลสภาพอากาศและช่วงเวลาที่เหมาะสม</p>
+        <span class="text-secondary font-bold tracking-wider uppercase text-sm">Seasonal Travel</span>
+        <h1 class="text-4xl font-heading font-bold mt-2">เที่ยวตามฤดูกาล</h1>
+        <p class="text-gray-300 mt-2 max-w-2xl mx-auto">เลือกเที่ยวตามฤดูกาลที่คุณชอบ พร้อมข้อมูลสภาพอากาศและช่วงเวลาที่เหมาะสม</p>
     </div>
 </div>
 
